--- a/MvcApp/app/resources/lemi/views/lemi.jl.html
+++ b/MvcApp/app/resources/lemi/views/lemi.jl.html
@@ -1,9 +1,14 @@
 <div class="content">
     <!--<form action="/" method="POST">-->
-    <p><span>Период от </span><input id="date_from" type="date" name="date_from" value="2019-12-22"><span> до </span>
-        <input id="date_to" type="date" name="date_to" value="2019-12-22"></p>
+<!--    <p><span>Период от </span><input class="date_to" id="date_from" name="date_from"><span> до </span>-->
+<!--        <input class="date_to" id="date_to" name="date_to"></p>-->
 <!--    <p id="number-picker-block">Отбирать по <input id="number-picker" type="number" value="10" min="1" max="60" step="1" name="gr_min"> минут(ы)</p>-->
-
+    <p>Выберите период:</p>
+    <div class="input-daterange input-group" id="datepicker">
+        <input id="date_from" type="text" class="input-sm form-control" name="date_from" />
+        <span class="input-group-addon">to</span>
+        <input id="date_to" type="text" class="input-sm form-control" name="date_to" />
+    </div>
     <p><input type="submit" value="Отправить" class="btn btn-primary btn-lg" onclick="create_plot()"></p>
     <!--</form>-->
     <p><input id="sma" type="submit" value="Сгладить" class="btn btn-secondary btn-lg" onclick="sma_plot()" style="display: none;"></p>
