--- a/MvcApp/app/layouts/lemi.jl.html
+++ b/MvcApp/app/layouts/lemi.jl.html
@@ -14,6 +14,27 @@
 
 </head>
 <body>
+
+<div class="menu-container">
+    <div class="menu">
+        <a href="#" class="logo">Logo</a>
+        <ul class="clearfix">
+            <li><a href="#">Home</a></li>
+
+
+            <li><a href="#">Systems</a>
+                <ul>
+                    <li><a href="/lemi" class="active">Lemi</a></li>
+                    <li><a href="#">Electrovert</a></li>
+                    <li><a href="#">Spectr</a></li>
+                    <li><a href="#">TEC_ROT</a></li>
+                </ul>
+            </li>
+            <li><a href="#">Contacts</a></li>
+        </ul>
+    </div>
+</div>
+
 <%
 @yield
 %>
