--- a/MvcApp/public/css/lemi.css
+++ b/MvcApp/public/css/lemi.css
@@ -5,7 +5,10 @@ body {
     box-sizing: border-box;
 }
 a {
-    color: #333;
+    color: #3546b3;
+}
+.btn .btn-primary .btn-lg{
+    color: #3546b3;
 }
 .menu {
     width: 100%;
@@ -246,4 +249,101 @@ Mobile style's
 .content p {
     text-align: center;
     padding: 10px;
+}
+.datepicker,
+.table-condensed, .datepicker td, .datepicker th {
+    width: 500px;
+    height:500px;
+    border-radius: 0;
+    padding: 0;
+}
+.datepicker-days table thead, .datepicker-months table thead, .datepicker-years table thead, .datepicker-decades table thead, .datepicker-centuries table thead {
+    background: #3546b3;
+    color: #ffffff;
+    border-radius: 0;
+}
+
+.datepicker-days table thead tr:nth-child(2n+0) td, .datepicker-days table thead tr:nth-child(2n+0) th {
+    /*border-radius: 3px;*/
+    font-weight: 300 !important;
+    font-size: 40px;
+    padding: 22px 16px;
+    border-radius: 0;
+}
+.datepicker-days table thead tr:nth-child(3n+0) {
+    text-transform: uppercase;
+    font-weight: 300 !important;
+    font-size: 20px;
+    padding: 22px 16px;
+    color: rgba(255, 255, 255, 0.7);
+    border-radius: 0;
+}
+.table-condensed > tbody > tr > td, .table-condensed > tbody > tr > th, .table-condensed > tfoot > tr > td, .table-condensed > tfoot > tr > th, .table-condensed > thead > tr > td, .table-condensed > thead > tr > th {
+    padding: 22px 16px;
+    border-radius: 0;
+}
+.table-condensed > tbody > tr > td, .table-condensed > tbody > tr > th, .table-condensed > tfoot > tr > td{
+    color: #3546b3;
+    font-size: 20px;
+}
+
+.datepicker-months table thead td, .datepicker-months table thead th, .datepicker-years table thead td, .datepicker-years table thead th, .datepicker-decades table thead td, .datepicker-decades table thead th, .datepicker-centuries table thead td, .datepicker-centuries table thead th {
+    border-radius: 0;
+    font-weight: 300 !important;
+    font-size: 40px;
+    padding: 50px 30px;
+}
+.datepicker td, .datepicker th {
+    border-radius: 0;
+    padding: 0px 16px;
+
+}
+
+.datepicker-days table thead, .datepicker-months table thead, .datepicker-years table thead, .datepicker-decades table thead, .datepicker-centuries table thead {
+    background: #3546b3;
+    color: #ffffff;
+    border-radius: 0;
+    padding: 22px 16px;
+}
+.datepicker .datepicker-switch {
+    font-size: 40px;
+    font-weight: 400 !important;
+    padding: 50px 30px;
+    border-radius: 0;
+    transition: 0.3s;
+}
+.datepicker table tr td span {
+    border-radius: 2px;
+    margin: 3%;
+    width: 27%;
+}
+.datepicker .datepicker-switch:hover {
+    color: rgba(255, 255, 255, 0.7);
+    background: transparent;
+}
+.datepicker table tr td span.active, .datepicker table tr td span.active:hover, .datepicker table tr td span.active.disabled, .datepicker table tr td span.active.disabled:hover {
+    background-color: #3546b3;
+    background-image: none;
+}
+.datepicker .prev, .datepicker .next {
+    color: rgba(255, 255, 255, 0.5);
+    transition: 0.3s;
+    width: 50px;
+    height: 50px;
+    background-color: #3546b3;
+}
+.datepicker .prev:hover, .datepicker .next:hover {
+    background: transparent;
+    color: rgba(255, 255, 255, 0.99);
+    font-size: 21px;
+}
+.input-daterange input {
+    text-align: center;
+}
+.dropdown-menu {
+    border: 1px solid rgba(0,0,0,.1);
+    box-shadow: 0 6px 12px rgba(0,0,0,.175);
+}
+.datepicker-dropdown.datepicker-orient-top:before {
+    border-top: 7px solid rgba(0,0,0,.1);
 }
