--- a/MvcApp/app/layouts/electrovert.jl.html
+++ b/MvcApp/app/layouts/electrovert.jl.html
@@ -26,7 +26,7 @@
                 <ul>
                     <li><a href="/lemi">Lemi</a></li>
                     <li><a href="/electrovert" class="active">Electrovert</a></li>
-                    <li><a href="#">Spectr</a></li>
+                    <li><a href="/spectr">Spectr</a></li>
                     <li><a href="#">TEC_ROT</a></li>
                 </ul>
             </li>
