--- a/MvcApp/app/layouts/spectr.jl.html
+++ b/MvcApp/app/layouts/spectr.jl.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8" />
     <title>WebApp</title>
-<!--    <link href="/css/genie/bootstrap.min.css" rel="stylesheet">-->
+    <!--    <link href="/css/genie/bootstrap.min.css" rel="stylesheet">-->
     <link href="/css/genie/style.css" rel="stylesheet">
     <link href="/css/genie/prism.css" rel="stylesheet" />
     <link href="/css/lemi.css" rel="stylesheet" />
@@ -24,9 +24,9 @@
 
             <li><a href="#">Systems</a>
                 <ul>
-                    <li><a href="/lemi" class="active">Lemi</a></li>
+                    <li><a href="/lemi">Lemi</a></li>
                     <li><a href="/electrovert">Electrovert</a></li>
-                    <li><a href="/spectr">Spectr</a></li>
+                    <li><a href="/spectr" class="active">Spectr</a></li>
                     <li><a href="#">TEC_ROT</a></li>
                 </ul>
             </li>
@@ -46,7 +46,7 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.0.0-beta/js/bootstrap.min.js"></script>
 <script src="/js/genie/prism.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.9.0/js/bootstrap-datepicker.min.js" integrity="sha512-T/tUfKSV1bihCnd+MxKD0Hm1uBBroVYBOYSk1knyvQ9VyZJpc/ALb4P0r6ubwVPSGB2GvjeoMAJJImBG12TiaQ==" crossorigin="anonymous"></script>
-<script src="/js/lemi_dp.js"></script>
-<script src="/js/lemi.js"></script>
+<script src="/js/spectr_dp.js"></script>
+<script src="/js/spectr.js"></script>
 </body>
 </html>
